[gd_scene load_steps=14 format=2]

[ext_resource path="res://mainHero/reka1.svg" type="Texture" id=1]
[ext_resource path="res://mainHero/korpus.svg" type="Texture" id=2]
[ext_resource path="res://mainHero/reka2.svg" type="Texture" id=3]
[ext_resource path="res://mainHero/noga1.svg" type="Texture" id=4]
[ext_resource path="res://mainHero/noga2.svg" type="Texture" id=5]
[ext_resource path="res://mainHero/glowa.svg" type="Texture" id=6]
[ext_resource path="res://Player.gd" type="Script" id=7]
[ext_resource path="res://KeyCap.png" type="Texture" id=8]
[ext_resource path="res://white background.png" type="Texture" id=9]
[ext_resource path="res://grey background.png" type="Texture" id=10]
[ext_resource path="res://BobloxClassic.ttf" type="DynamicFontData" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 57.0
height = 124.0

[sub_resource type="DynamicFont" id=2]
size = 29
font_data = ExtResource( 11 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 7 )

[node name="Node2D" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D"]

[node name="Korpus" type="Sprite" parent="Node2D/AnimatedSprite"]
position = Vector2( -1.1, -148.1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="Noga1" type="Sprite" parent="Node2D/AnimatedSprite/Korpus"]
position = Vector2( -49.5, 455.5 )
z_index = -1
texture = ExtResource( 4 )

[node name="Noga2" type="Sprite" parent="Node2D/AnimatedSprite/Korpus"]
position = Vector2( 66, 458.5 )
z_index = -1
texture = ExtResource( 5 )

[node name="Reka1" type="Sprite" parent="Node2D/AnimatedSprite/Korpus"]
position = Vector2( -190, 101 )
rotation = -0.380482
z_index = -1
texture = ExtResource( 1 )

[node name="Reka2" type="Sprite" parent="Node2D/AnimatedSprite/Korpus"]
position = Vector2( 151, 105 )
rotation = 0.253073
z_index = -1
texture = ExtResource( 3 )

[node name="Glowa" type="Sprite" parent="Node2D"]
position = Vector2( -0.0999985, -207.1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -116 )
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="Camera2D" type="Camera2D" parent="."]
smoothing_enabled = true

[node name="Keycap" type="Sprite" parent="."]
visible = false
position = Vector2( 121, -255 )
texture = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -116 )
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="RightHand" type="TextureRect" parent="."]
margin_left = -24.0
margin_top = -92.0
margin_right = 16.0
margin_bottom = 36.0
rect_rotation = 124.136
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftHand" type="TextureRect" parent="."]
margin_left = 13.0
margin_top = -109.0
margin_right = 53.0
margin_bottom = -69.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -49.0
margin_top = -263.0
margin_right = 51.0
margin_bottom = -213.0
rect_scale = Vector2( 1, 0.359998 )
value = 6.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 9 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HealthBar"]
margin_right = 100.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
text = "1000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
